--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.2",
+    "@angular/cdk": "^16.1.2",
     "@angular/common": "^16.1.2",
     "@angular/compiler": "^16.1.2",
     "@angular/core": "^16.1.2",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.1.2",
     "@angular/material": "^16.1.2",
     "@angular/platform-browser": "^16.1.2",
     "@angular/platform-browser-dynamic": "^16.1.2",
     "@angular/router": "^16.1.2",
-    "firebase": "^9.19.1",
-    "firebaseui": "^6.0.2",
     "firebaseui-angular": "^6.1.3",
+    "firebase": "^9.23.0",
+    "firebaseui": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
@@ -39,6 +41,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "schematics-scss-migrate": "^2.3.17",
-    "typescript": "~4.9.4"
+    "typescript": "^5.1.6"
   }
 }
