GitHub Actions deploy

--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,16 @@
 {
-  "hosting": [
-    {
-      "target": "spring-module-page",
-      "source": ".",
-      "frameworksBackend": {}
-    }
-  ]
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
