--- a/.github/workflows/fast-forward.yml
+++ b/.github/workflows/fast-forward.yml
@@ -2,7 +2,7 @@ name: Check branch fast-forward-ness
 
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
     types: [review_requested]
 
 jobs:
